<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activity.MainActivity"
    android:background="@color/fondo"
    android:fitsSystemWindows="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <include android:id="@+id/toolbar" layout="@layout/toolbar"/>




        <LinearLayout
            android:id="@+id/baner1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/baner"

            >

            <TextView
                android:id="@+id/textTaxiTiempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textTaxiTiempo"
                android:layout_gravity="bottom"
                android:textColor="@color/textTaxiTiempo"
                android:layout_marginLeft="@dimen/textTaxi_busTiempo"
                />

            <ImageView
                android:layout_width="@dimen/longitud_de_linea"
                android:layout_height="30dp"
                android:src="@drawable/linea"
                android:layout_gravity="bottom"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textoTaxi"
                android:textSize="@dimen/textTaxi_bus"
                android:textColor="@color/textTaxiTiempo"
                android:textStyle="bold"
                android:layout_gravity="bottom"
                />
        </LinearLayout>

        <fragment
            android:id="@+id/primerFragment"
            android:name="com.example.alex.turuta.Fragment.PrimerFragment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragmenContenedor"

            tools:layout="@layout/fragment_primer"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/baner"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/textBusTiempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textBusTiempo"
                android:layout_gravity="bottom"
                android:textColor="@color/textTaxiTiempo"
                android:layout_marginLeft="@dimen/textTaxi_busTiempo"
                />

            <ImageView
                android:layout_width="@dimen/longitud_de_linea"
                android:layout_height="30dp"
                android:src="@drawable/linea"
                android:layout_gravity="bottom"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textoBus"
                android:textSize="@dimen/textTaxi_bus"
                android:textColor="@color/textTaxiTiempo"
                android:textStyle="bold"
                android:layout_gravity="bottom"
                android:paddingRight="@dimen/padingActivity"
                />




        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textoBusParadero"
            android:layout_gravity="right"
            android:textSize="@dimen/paradero"
            android:textColor="@color/textTaxiTiempo"
            android:layout_marginLeft="@dimen/margenBus"
            />

        <fragment
            android:id="@+id/segundoFragment"
            android:name="com.example.alex.turuta.Fragment.SegundoFragment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragmenContenedor"
            tools:layout="@layout/fragment_segundo"

            />


    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_anchor="@+id/toolbar"
        app:layout_anchorGravity="bottom|right">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btftaxi"
            android:layout_width="@dimen/botonesFloating"
            android:layout_height="@dimen/botonesFloating"
            android:src="@drawable/group_97"
            android:clickable="true"
            />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btfbus"
            android:layout_width="@dimen/botonesFloating"
            android:layout_height="@dimen/botonesFloating"
            android:src="@drawable/group_96"
            android:clickable="true"
            />

        <android.support.design.widget.FloatingActionButton
            android:layout_width="@dimen/botonesFloating"
            android:layout_height="@dimen/botonesFloating"
            android:src="@drawable/path_71"
            android:clickable="true"
            />

    </LinearLayout>






</android.support.design.widget.CoordinatorLayout>